# SparkMind-Inference

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.codex/skills/sparkmind-inference-evaluation/: SKILL.md
.codex/skills/sparkmind-inference-evaluation/references/: metrics.md
constraints/: validated.txt
docs/: async_runtime_handoff.md  inference_usage.md
examples/: alicia_m_async_runtime.py  alicia_m_sync_runtime.py  async_runtime_loop.py  compare_lerobot_official_inference.py  compare_libero_sim_actions.py  validate_dataset_async_inference.md  validate_dataset_async_inference.py  validate_dataset_inference.md  validate_dataset_inference.py
inference_sdk/: __init__.py  api.py  async_runtime.py  base.py  device.py  factory.py  types.py
inference_sdk/policy/: __init__.py  act.py  pi0.py  pi05.py  smolvla.py
sparkmind_inference/: __init__.py  api.py  base.py  exceptions.py  robot_io.py  runtime.py  types.py
sparkmind_inference/policy/: __init__.py  act.py  gripper_scale.py  pi0.py  pi05.py  rtc.py  smolvla.py
tests/: test_lerobot_step_alignment.py  test_pi_processor_normalization.py  test_robot_io_metadata.py
