[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "inference-sdk"
version = "0.1.0"
description = "Standalone inference SDK for ACT, SmolVLA, PI0, and PI0.5 policy inference."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "numpy>=2.0.0,<2.3.0",
  "opencv-python>=4.10.0,<4.14.0",
  "PyYAML>=6.0.1,<7.0.0",
  "torch>=2.2.1,<2.11.0",
]

[project.optional-dependencies]
act = [
  "omegaconf>=2.3.0,<2.4.0",
  "safetensors>=0.5.0,<0.8.0",
  "sparkmind>=1.0.0",
]
examples = [
  "av>=14.0.0,<16.0.0",
  "huggingface-hub>=1.0.0,<2.0.0",
  "matplotlib>=3.8.0,<3.11.0",
]
vla = [
  "omegaconf>=2.3.0,<2.4.0",
  "safetensors>=0.5.0,<0.8.0",
  "sentencepiece>=0.1.99",
  "sparkmind[pi]>=1.0.0",
  "tiktoken>=0.6.0",
  "transformers==5.3.0",
]
all = [
  "av>=14.0.0,<16.0.0",
  "omegaconf>=2.3.0,<2.4.0",
  "safetensors>=0.5.0,<0.8.0",
  "sentencepiece>=0.1.99",
  "sparkmind[pi,libero]>=1.0.0",
  "tiktoken>=0.6.0",
  "transformers==5.3.0",
  "lerobot[pi,smolvla,libero] @ git+https://github.com/huggingface/lerobot.git@v0.5.1",
  "huggingface-hub>=1.0.0,<2.0.0",
  "matplotlib>=3.8.0,<3.11.0",
]

[tool.setuptools.packages.find]
include = ["inference_sdk*"]
