[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "sparkmind-inference"
version = "1.0.0rc7"
description = "Standalone inference SDK for ACT, SmolVLA, PI0, and PI0.5 policy inference."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12,<3.14"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  { name = "Synria Robotics" },
]
keywords = ["robotics", "imitation-learning", "vla", "act", "lerobot", "libero"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=2.0.0,<2.3.0",
  "opencv-python>=4.10.0,<4.14.0",
  "PyYAML>=6.0.1,<7.0.0",
  "torch>=2.2.1,<2.11.0",
]

[project.optional-dependencies]
act = [
  "omegaconf>=2.3.0,<2.4.0",
  "safetensors>=0.5.0,<0.8.0",
  "sparkmind==1.0.0rc4",
]
examples = [
  "av>=14.0.0,<16.0.0",
  "huggingface-hub>=1.0.0,<2.0.0",
  "matplotlib>=3.8.0,<3.11.0",
]
vla = [
  "omegaconf>=2.3.0,<2.4.0",
  "safetensors>=0.5.0,<0.8.0",
  "sentencepiece>=0.1.99",
  "sparkmind[pi]==1.0.0rc4",
  "tiktoken>=0.6.0",
  "transformers==5.3.0",
]
all = [
  "av>=14.0.0,<16.0.0",
  "omegaconf>=2.3.0,<2.4.0",
  "safetensors>=0.5.0,<0.8.0",
  "sentencepiece>=0.1.99",
  "sparkmind[pi,libero]==1.0.0rc4",
  "tiktoken>=0.6.0",
  "transformers==5.3.0",
  "lerobot[pi,smolvla,libero]==0.5.1",
  "huggingface-hub>=1.0.0,<2.0.0",
  "matplotlib>=3.8.0,<3.11.0",
]

[project.urls]
Homepage = "https://github.com/Synria-Robotics/SparkMind-Inference"
Repository = "https://github.com/Synria-Robotics/SparkMind-Inference"
Issues = "https://github.com/Synria-Robotics/SparkMind-Inference/issues"

[tool.setuptools.packages.find]
include = ["sparkmind_inference*"]
